<resources>
    <string name="app_name">Lang Tutor</string>

    <!--Language Names -->
    <string name="hindi">Hindi</string>
    <string name="gujarati">Gujarati</string>
    <string name="marathi">Marathi</string>
    <string name="japanese">Japanese</string>
    <string name="french">French</string>

    <!--Category Names-->
    <string name="numbers">Numbers</string>
    <string name="alphabets">Alphabets</string>
    <string name="phrases">Phrases</string>
    <string name="colors">Colors</string>

    <!--English Numbers-->
    <string name="english_number_one">One</string>
    <string name="english_number_two">Two</string>
    <string name="english_number_three">Three</string>
    <string name="english_number_four">Four</string>
    <string name="english_number_five">Five</string>
    <string name="english_number_six">Six</string>
    <string name="english_number_seven">Seven</string>
    <string name="english_number_eight">Eight</string>
    <string name="english_number_nine">Nine</string>
    <string name="english_number_ten">Ten</string>

    <!--English Colors-->
    <string name="english_color_red">Red</string>
    <string name="english_color_green">Green</string>
    <string name="english_color_brown">Brown</string>
    <string name="english_color_gray">Gray</string>
    <string name="english_color_black">Black</string>
    <string name="english_color_white">White</string>
    <string name="english_color_yellow">Yellow</string>

    <!--English Phrases-->
    <string name="english_phrases_one">Where are you going?</string>
    <string name="english_phrases_two">What is your name?</string>
    <string name="english_phrases_three">My name is ...</string>
    <string name="english_phrases_four">How are you feeling?</string>
    <string name="english_phrases_five">I am feeling good.</string>
    <string name="english_phrases_six">Are you coming?</string>
    <string name="english_phrases_seven">Yes, I\'m coming.</string>
    <string name="english_phrases_eight">I am coming.</string>
    <string name="english_phrases_nine">Let\'s go.</string>
    <string name="english_phrases_ten">Come here.</string>

    <!--Hindi Numbers-->
    <string name="hindi_number_one">Ek</string>
    <string name="hindi_number_two">Do</string>
    <string name="hindi_number_three">Teen</string>
    <string name="hindi_number_four">Chaar</string>
    <string name="hindi_number_five">Panj</string>
    <string name="hindi_number_six">Chhah</string>
    <string name="hindi_number_seven">Saat</string>
    <string name="hindi_number_eight">Aath</string>
    <string name="hindi_number_nine">Nau</string>
    <string name="hindi_number_ten">Das</string>

    <!--Gujarati Numbers-->
    <string name="gujarati_number_one">Ēka</string>
    <string name="gujarati_number_two">Bē</string>
    <string name="gujarati_number_three">Traṇa</string>
    <string name="gujarati_number_four">Cāra</string>
    <string name="gujarati_number_five">Pān̄ca</string>
    <string name="gujarati_number_six">Cha</string>
    <string name="gujarati_number_seven">Sāta</string>
    <string name="gujarati_number_eight">Āṭha</string>
    <string name="gujarati_number_nine">Nava</string>
    <string name="gujarati_number_ten">Dasa</string>

    <!--Gujarati Numbers Script-->
    <string name="gujarati_number_one_script">એક</string>
    <string name="gujarati_number_two_script">બે</string>
    <string name="gujarati_number_three_script">ત્રણ</string>
    <string name="gujarati_number_four_script">ચાર</string>
    <string name="gujarati_number_five_script">પાંચ</string>
    <string name="gujarati_number_six_script">છ</string>
    <string name="gujarati_number_seven_script">સાત</string>
    <string name="gujarati_number_eight_script">આઠ</string>
    <string name="gujarati_number_nine_script">નવ</string>
    <string name="gujarati_number_ten_script">દસ</string>

    <!--Gujarati Colors-->
    <string name="gujarati_color_red">Lāla</string>
    <string name="gujarati_color_green">Līlō</string>
    <string name="gujarati_color_brown">Bhūrā</string>
    <string name="gujarati_color_gray">Bhūkharō</string>
    <string name="gujarati_color_black">Kāḷō</string>
    <string name="gujarati_color_white">Saphēda</string>
    <string name="gujarati_color_yellow">Pīḷō</string>

    <!--Gujarati Colors Script-->
    <string name="gujarati_color_red_script">લાલ</string>
    <string name="gujarati_color_green_script">લીલો</string>
    <string name="gujarati_color_brown_script">ભૂરા</string>
    <string name="gujarati_color_gray_script">ભૂખરો</string>
    <string name="gujarati_color_black_script">કાળો</string>
    <string name="gujarati_color_white_script">સફેદ</string>
    <string name="gujarati_color_yellow_script">પીળો</string>


    <!--Gujarati Phrases-->
    <string name="gujarati_phrases_one">Tamē kyāṁ jāva chō?</string>
    <string name="gujarati_phrases_two">Tamāruṁ nāma śuṁ chē?</string>
    <string name="gujarati_phrases_three">Māruṁ nāma...</string>
    <string name="gujarati_phrases_four">Tamanē kēvuṁ lāgē chē?</string>
    <string name="gujarati_phrases_five">Manē sāru lāgī rahyu chē.</string>
    <string name="gujarati_phrases_six">Śuṁ tamē āvō chō?</string>
    <string name="gujarati_phrases_seven">Hā, huṁ āvuṁ chuṁ.</string>
    <string name="gujarati_phrases_eight">Huṁ āvuṁ chu.</string>
    <string name="gujarati_phrases_nine">Cālō ja\'iē</string>
    <string name="gujarati_phrases_ten">Ahī āvō.</string>

    <!--Gujarati Phrases Script-->
    <string name="gujarati_phrases_one_script">તમે ક્યાં જાવ છો?</string>
    <string name="gujarati_phrases_two_script">તમારું નામ શું છે?</string>
    <string name="gujarati_phrases_three_script">મારું નામ ...</string>
    <string name="gujarati_phrases_four_script">તમને કેવું લાગે છે?</string>
    <string name="gujarati_phrases_five_script">મને સારુ લાગી રહ્યુ છે.</string>
    <string name="gujarati_phrases_six_script">શું તમે આવો છો?</string>
    <string name="gujarati_phrases_seven_script">હા, હું આવું છું.</string>
    <string name="gujarati_phrases_eight_script">હું આવું છુ.</string>
    <string name="gujarati_phrases_nine_script">ચાલો જઇએ.</string>
    <string name="gujarati_phrases_ten_script">અહી આવો.</string>

    <!--Hindi Number Script-->
    <string name="hindi_number_one_script">एक</string>
    <string name="hindi_number_two_script">दो</string>
    <string name="hindi_number_three_script">तीन</string>
    <string name="hindi_number_four_script">चार</string>
    <string name="hindi_number_five_script">पंज</string>
    <string name="hindi_number_six_script">छह</string>
    <string name="hindi_number_seven_script">सात</string>
    <string name="hindi_number_eight_script">आठ</string>
    <string name="hindi_number_nine_script">नौ</string>
    <string name="hindi_number_ten_script">दस</string>

    <!--Marathi Numbers-->
    <string name="marathi_number_one">Ēka</string>
    <string name="marathi_number_two">Dōna</string>
    <string name="marathi_number_three">Tīna</string>
    <string name="marathi_number_four">Cāra</string>
    <string name="marathi_number_five">Pāca</string>
    <string name="marathi_number_six">Sahā</string>
    <string name="marathi_number_seven">Sāta</string>
    <string name="marathi_number_eight">Āṭha</string>
    <string name="marathi_number_nine">Naū</string>
    <string name="marathi_number_ten">Dahā</string>


    <!--Marathi Numbers Script-->
    <string name="marathi_number_one_script">एक</string>
    <string name="marathi_number_two_script">दोन</string>
    <string name="marathi_number_three_script">तीन</string>
    <string name="marathi_number_four_script">चार</string>
    <string name="marathi_number_five_script">पाच</string>
    <string name="marathi_number_six_script">सहा</string>
    <string name="marathi_number_seven_script">सात</string>
    <string name="marathi_number_eight_script">आठ</string>
    <string name="marathi_number_nine_script">नऊ</string>
    <string name="marathi_number_ten_script">दहा</string>

    <!--Marathi Colors-->
    <string name="marathi_color_red">Lāla</string>
    <string name="marathi_color_green">Hiravā</string>
    <string name="marathi_color_brown">Tapakirī</string>
    <string name="marathi_color_gray">karaḍā</string>
    <string name="marathi_color_black">Kāḷā</string>
    <string name="marathi_color_white">Pāṇḍharā</string>
    <string name="marathi_color_yellow">Pivaḷā</string>

    <!--marathi Colors Script-->
    <string name="marathi_color_red_script">लाल</string>
    <string name="marathi_color_green_script">हिरवा</string>
    <string name="marathi_color_brown_script">तपकिरी</string>
    <string name="marathi_color_gray_script">करडा</string>
    <string name="marathi_color_black_script">काळा</string>
    <string name="marathi_color_white_script">पांढरा</string>
    <string name="marathi_color_yellow_script">पिवळा</string>

    <!--Marathi Phrases-->
    <string name="marathi_phrases_one">Āpaṇa kōṭhē jāta āhāta?</string>
    <string name="marathi_phrases_two">Tujhaṁ nāva kāya āhē?</string>
    <string name="marathi_phrases_three">Mājhaṁ nāvaṁ...</string>
    <string name="marathi_phrases_four">Tulā kasē vāṭata āhē?</string>
    <string name="marathi_phrases_five">Malā cāṅgalē vāṭata āhē</string>
    <string name="marathi_phrases_six">Tū yēta āhēsa kā?</string>
    <string name="marathi_phrases_seven">Hōya, mī yēta āhē</string>
    <string name="marathi_phrases_eight">Mī yēta āhē</string>
    <string name="marathi_phrases_nine">Cala jā'ūyā.</string>
    <string name="marathi_phrases_ten">Ikaḍē yē.</string>

    <!--Marathi Phrases Script-->
    <string name="marathi_phrases_one_script">आपण कोठे जात आहात?</string>
    <string name="marathi_phrases_two_script">तुझं नाव काय आहे?</string>
    <string name="marathi_phrases_three_script">माझं नावं...</string>
    <string name="marathi_phrases_four_script">तुला कसे वाटत आहे?</string>
    <string name="marathi_phrases_five_script">मला चांगले वाटत आहे</string>
    <string name="marathi_phrases_six_script">तू येत आहेस का?</string>
    <string name="marathi_phrases_seven_script">होय, मी येत आहे</string>
    <string name="marathi_phrases_eight_script">मी येत आहे.</string>
    <string name="marathi_phrases_nine_script">चल जाऊया.</string>
    <string name="marathi_phrases_ten_script">इकडे ये.</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
